--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-  image: "${CI_TEMPLATE_REGISTRY_HOST}/pages/hugo:latest"
+  image: "registry.gitlab.com/pages/hugo:latest"
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -19,7 +19,7 @@ pages:  # a predefined job that builds your pages and saves them to the specifie
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   environment: productiondefault:
-  image: "${CI_TEMPLATE_REGISTRY_HOST}/pages/hugo:latest"
+  image: "registry.gitlab.com/pages/hugo:latest"
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
