--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 default:
   image: "registry.gitlab.com/pages/hugo:latest"
+  THEME_URL: "github.com/HugoBlox/hugo-blox-builder/starters/academic-cv"
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -16,8 +17,9 @@ pages:  # a predefined job that builds your pages and saves them to the specifie
   artifacts:
     paths:
       - public
-  only: 
-    - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  environment: productiondefault
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
