--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,9 +4,9 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Tyler Gorda's Academic Website
+title: Tyler Gorda
 # Website URL
-baseURL: 'tgorda@gitlab.io'
+baseURL: 'https://tygorda.github.io/'
 
 ############################
 ## LANGUAGE
