--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,7 +23,7 @@ marketing:
     fathom: ''
     pirsch: ''
   verification:
-    google: ''
+    google: 'M-THAQGHglslbDaA4K7gjfC4cXMMuiFLfIZJZFBzZZY'
     baidu: ''
 
 # Site header
@@ -58,3 +58,4 @@ features:
     enable: true
   privacy_pack:
     enable: false
+    <a href="https://www.flaticon.com/free-icons/molecule" title="molecule icons">Molecule icons created by Freepik - Flaticon</a>
