Update CV. Add OSU in various places.

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'I am a postdoctoral reasearcher at Goethe University Frankfurt, broadly interested in the behavior of strongly interacting matter at high densities and exploring this region of the phase diagram quantum chromodynamics, or the strong nuclear force.' # todo
+    description: 'I am an assistant professor at The Ohio State University, broadly interested in the behavior of strongly interacting matter at high densities and exploring this region of the phase diagram quantum chromodynamics, or the strong nuclear force.' # todo
     twitter: ''
   analytics:
     google_analytics: ''
